# llama.cpp

./: .gitignore  AGENTS.md  CLAUDE.md  CMakeLists.txt  README.md  convert_hf_to_gguf.py
.github/workflows/: army-test.yml
common/: arg.cpp  common.cpp  common.h  fit.cpp  reasoning-budget.cpp  reasoning-budget.h  sampling.cpp  sampling.h  speculative.cpp  speculative.h
conversion/: zaya.py
docs/: paged-attn-debug.md
docs/aiter-integration/: ARCHITECTURE.md
docs/aiter-integration/upstream-issues/: 01-triton-grid-python-operators.md  02-triton-aot-header-extern-c.md  03-triton-aot-fp32-scalar-truncation.md
docs/dev/: memory-tier-bug-catalog.md
docs/memory-tier/: ARCHITECTURE.md  OPERATOR-RUNBOOK.md  USER-GUIDE.md
docs/memory-tier/adr/: A1-hybrid-paged-primary.md  A10-real-seq-cp-cow.md  A2-fingerprint-at-prefill.md  A3-semantic-prefetch-only.md  A4-single-threading.md  A5-persistence-explicit.md  A6-multi-instance.md  A7-paged-default-on.md  A8-bge-small-on-wrapper.md  A9-real-partial-seq-rm.md  README.md
examples/speculative-simple/: speculative-simple.cpp
ggml/include/: ggml.h
ggml/src/: CMakeLists.txt  ggml.c
ggml/src/ggml-cpu/: ggml-cpu.c  ops.cpp  ops.h
ggml/src/ggml-cuda/: CMakeLists.txt  common.cuh  fattn-common.cuh  fattn-mma-f16.cuh  fattn-tile.cu  fattn-tile.cuh  fattn.cu  ggml-cuda.cu  mean.cu  mma.cuh  mmq.cu  mmq.cuh  mmvq-tq.cuh  mmvq.cu  mt_pagedattn.cu  mt_pagedattn.cuh  mt_pagedattn_aiter.cu  mt_pagedattn_aiter.cuh  mt_pagedattn_decode.cu  mt_pagedattn_decode.cuh  mt_pagedattn_ops.cuh  mt_pagedattn_tile.cu  mt_pagedattn_tile.cuh  ssm-scan.cu  sum.cu
ggml/src/ggml-cuda/aiter-integration/: CMakeLists.txt  README.md
ggml/src/ggml-cuda/aiter-integration/cmake/: TritonAOT.cmake  patch_triton_aot.py
ggml/src/ggml-cuda/aiter-integration/kernels/: MAD-188-PROGRESS.md  POC-verified-invocation.md  unified_attention.py  vector_add.py
ggml/src/ggml-cuda/aiter-integration/tools/: compile_aiter_kernel.py
ggml/src/ggml-cuda/aiter-integration/wrappers/: POC-test_uattn_2d.cpp  POC-test_uattn_3d_longctx.cpp  POC-test_uattn_3d_multiblock.cpp  POC-test_uattn_3d_reduce.cpp  POC-test_vector_add.cpp  aiter_runtime_compiler.cpp  aiter_runtime_compiler.h  mt_aiter_unified_attn.cpp  mt_aiter_unified_attn.h  test_aiter_registry.cpp  test_mt_aiter_unified_attn.cpp  vector_add_wrapper.cpp
ggml/src/ggml-cuda/vendors/: hip.h
ggml/src/ggml-hip/: CMakeLists.txt
gguf-py/gguf/: constants.py  tensor_mapping.py
include/: llama.h
plans/: kv-embed-model.md  kv-tiered-cache.md  nvme-vram-weight-paging.md  pool-allocation-switch.md  rocm-improvements-hybrid-rdna.md  rocm-improvements.md  vram-allocation-fix.md
plans/errors/: command.md  output.md
scripts/: regress-memory-tier.sh
scripts/army/: README.md  army.service.example  cleanup-cold.sh  mad-lab.sh  main.sh
scripts/perf/: bench_paged_paths.sh  parse_prefill_trace.py  profile_prefill.sh
scripts/test/: run-army-matrix.sh
src/: CMakeLists.txt  llama-arch.cpp  llama-arch.h  llama-context.cpp  llama-eviction-policy.h  llama-graph.cpp  llama-graph.h  llama-hparams.h  llama-io-uring.cpp  llama-io-uring.h  llama-kv-cache-iswa.cpp  llama-kv-cache-iswa.h  llama-kv-cache-paged.cpp  llama-kv-cache-paged.h  llama-kv-cache-tiered.cpp  llama-kv-cache-tiered.h  llama-kv-cache.cpp  llama-kv-cache.h  llama-kv-cells.h  llama-memory-hybrid-iswa.cpp  llama-memory-hybrid-iswa.h  llama-memory-hybrid.cpp  llama-memory-hybrid.h  llama-memory-recurrent.cpp  llama-memory-recurrent.h  llama-memory.cpp  llama-memory.h  llama-model-loader.cpp  llama-model-loader.h  llama-model.cpp  llama-model.h  llama-quant.cpp  llama-weight-pager.cpp  llama-weight-pager.h  llama.cpp
src/memory-tier/: mt-block-pool.cpp  mt-block-pool.h  mt-block-table.cpp  mt-block-table.h  mt-capacity.cpp  mt-capacity.h  mt-config.cpp  mt-config.h  mt-context.cpp  mt-context.h  mt-embed.cpp  mt-embed.h  mt-eviction.cpp  mt-eviction.h  mt-inner-access.h  mt-kvtc-store.cpp  mt-kvtc-store.h  mt-locked-buffer.cpp  mt-locked-buffer.h  mt-mover-attn.cpp  mt-mover-attn.h  mt-mover-recurrent.cpp  mt-mover-recurrent.h  mt-quant.cpp  mt-quant.h  mt-semantic.cpp  mt-semantic.h  mt-tiered.cpp  mt-tiered.h
src/models/: models.h  qwen35.cpp  qwen35moe.cpp  zaya.cpp
src/weight-pager/: wp-eval-cb.cpp  wp-eval-cb.h  wp-file-io.cpp  wp-file-io.h  wp-gpu-transport.cpp  wp-gpu-transport.h  wp-page-catalog.cpp  wp-page-catalog.h  wp-pager.cpp  wp-pager.h  wp-pool.cpp  wp-pool.h  wp-prefetch.cpp  wp-prefetch.h
tests/: .gitignore  CMakeLists.txt  test-memory-tier.cpp  test-mt-block-pool.cpp  test-mt-block-semantic-index.cpp  test-mt-block-table.cpp  test-mt-quant.cpp  test-mt-tiered-thin.cpp  test-paged-lifecycle.cpp  test-paged-semantic.cpp  test-weight-pager.cpp
tests/perf-baseline/mt_pagedattn/: 32k-acc2.json  32k-acc3.json  32k-acc4.json  32k.json  8k.json
tests/perf-baseline/paged-paths/: 3a7e61a72-20260519T205603Z.json
tests/stress/: stress-paged-multi-seq.py
tools/llama-bench/: llama-bench.cpp
tools/server/: CMakeLists.txt  README.md  server-context.cpp  server-models.cpp  server-task.cpp  server-task.h  server-tiered-cache.cpp  server-tiered-cache.h
